# allocators

./: meson.build
.cache/clangd/index/: allocator.c.3C7CAE2B3517B2A7.idx  allocator.h.F284A32B30B4C420.idx  gpa.c.5A3B6D491464C8E8.idx  gpa.h.12136360455F3774.idx  gpa_test.c.1482DAF99538EE2C.idx  test_util.h.283F9AC3CB156A5A.idx
include/: allocator.h  allocators.h  arena.h  gpa.h
src/: allocator.c  arena.c  gpa.c  meson.build
test/: arena_test.c  gpa_test.c  meson.build  test_util.h
